<resources>
    <string name="app_name">Indietracks 2016 Festival Guide</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_artist">Artists</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_timeline">Timeline</string>
    <string name="action_info">Info</string>

    <string name="gettingThereInfo">Travel</string>
    <string name="taxisInfo">Taxis</string>
    <string name="aboutInfo">About</string>
    <string name="actionInfo">Guide</string>
    <string name="infoAction">Info</string>
    <string name="settingsAction">Settings</string>
    <string name="scheduled_time">Schedule</string>

    <string name="app_title">Indietracks</string>
    <string name="band_image">Image of performer, DJ or Workshop</string>
    <string name="settings_home">Back to guide</string>
</resources>
