<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/info_getting_there"
        android:title="@string/gettingThereInfo"
        app:showAsAction="always" />
    <item android:id="@+id/info_taxis"
        android:title="@string/taxisInfo"
        app:showAsAction="always" />
    <item android:id="@+id/info_about"
        android:title="@string/aboutInfo"
        app:showAsAction="always" />
    <item android:id="@+id/info_action"
        android:title="@string/actionInfo"
        app:showAsAction="always" />
    <item android:id="@+id/settings_action"
        android:title="@string/settingsAction"
        app:showAsAction="always" />
    <item android:id="@+id/info_festival"
        android:title="Festival information"
        app:showAsAction="always" />
</menu>