<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_artist"
        android:title="@string/action_artist"
        android:icon="@mipmap/ic_face_black_36dp"
        app:showAsAction="always"/>
    <item android:id="@+id/action_schedule"
        android:title="@string/action_schedule"
        android:icon="@mipmap/ic_queue_music_black_36dp"
        app:showAsAction="always"/>
    <item android:id="@+id/action_timeline"
        android:title="@string/action_timeline"
        android:icon="@mipmap/ic_schedule_black_36dp"
        app:showAsAction="always"/>
    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@mipmap/ic_info_outline_black_36dp"
        app:showAsAction="ifRoom"/>
</menu>